--- a/BitProject/WebContent/WEB-INF/web.xml
+++ b/BitProject/WebContent/WEB-INF/web.xml
@@ -29,18 +29,18 @@
   	<param-value>/WEB-INF/applicationContext.xml</param-value>
   </context-param>
   
-  <filter>
+<!--   <filter>
   	<filter-name>myFilter</filter-name>
   	<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
   	<init-param>
   		<param-name>encoding</param-name>
   		<param-value>UTF-8</param-value>
   	</init-param>
-  </filter>
+  </filter> -->
   
-  <filter-mapping>
+<!--   <filter-mapping>
   	<filter-name>myFilter</filter-name>
   	<url-pattern>/*</url-pattern>
   </filter-mapping>
-  
+   -->
 </web-app>
